# landslides-trigrs

./: .gitignore  LICENSE.md  README.md  USER_GUIDE.md  code.json  gm_in.txt  tpx_in.txt  tr_in.txt  tr_in_flume.txt  tr_in_mc.txt  tr_in_sy.txt  uc_in.txt
data/MinorCreek/: TIcelindxList_MC.txt  TIdscelGrid_MC.asc  slope.asc
data/flume/: TIdscelList_flume.txt  TIwfactorList_flume.txt  elev.asc  slope.asc  zones_flume.asc
data/sy91/: slope.asc
data/tutorial/: dem.asc  depthwt.asc  directions.asc  master.asc  ri1.asc  ri2.asc  rizero.asc  slope.asc  test1.asc  test2.asc  zmax.asc  zones.asc
doc/: ReadMe-Feb2012.txt  readme.txt
examples/: plotTestResults.py
myCMakeFiles/: hdf5.cmake
myCmakeFiles/: hdf5.cmake
src/: CMakeLists.txt
src/GridMatch/: gridmatch.f90  srdgrd.f  ssizgrd.f95  ssvgrd.f
src/TRIGRS/: Makefile  dbsct.f  derfc.f  dsimps.f95  dzero_brac.f90  flux.f90  grids.f95  input_file_defs.f95  input_vars.f95  irdgrd.f  irdgrd_p.f90  iverson.f95  ivestp.f95  model_vars.f95  prpijz.f90  pstpf.f95  pstpf_p.f95  pstpi.f95  rnoff.f95  rnoff_p.f95  satfin.f95  satinf.f95  satinf_p.f95  savage.f95  smallt.f95  srdgrd.f  srdgrd_p.f90  srdswm.f  ssizgrd.f95  ssizgrd_p.f95  steady.f95  svgstp.f95  svgstp_p.f95  svijz.f90  svlist.f95  svxmdv.f90  svxmdv_p.f90  trigrs.f90  trigrs_p.f90  trini.f95  (+7 more)
src/TRIGRS/mpi/: CMakeLists.txt  flux_p.f90  irdgrd_p.f90  irdswm_p.f90  ivestp_p.f95  modules_p.f90  partial_p.f90  pstpi_p.f95  satfin_p.f95  srdswm_p.f90  ssizgrd_p.f95  steady_p.f95  trigrs_p.f90  unsfin_p.f95
src/TRIGRS/serial/: CMakeLists.txt  calerf.f  dzero_brac.f90  input_vars.f95  irdswm.f  isvgrd.f  iverson.f95  ivestp.f95  m_writeHDF5.f90  pstpf.f95  rnoff.f95  roots.f  savage.f95  smallt.f95  srdgrd.f  ssizgrd.f95  ssvgrd.f  steady.f95  svgstp.f95  svlist.f95  trigrs.f90  trini.f95  unsfin.f95  unsth.f95
src/TopoIndex/: isvgrd.f  mpfldr.f  nxtcel.f90  rdflodir.f  sindex.f  slofac.f  srdgrd1.f  ssizgrd.f95  tpindx.f90
src/UnitConvert/: ssvgrd.f  unitconvert.f90
